--- a/guia semana 16/appsettings.json
+++ b/guia semana 16/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "guia_semana_16Context": "Server=(localdb)\\mssqllocaldb;Database=guia_semana_16Context;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
